# timestream

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: aux.h
src/: CMakeLists.txt  aux.c  aux.h  config.h.in  main.c
